2011-07-07  Sergio Martin <sergio.martin@artica.es>

	* include/functions_servers.php
	godmode/servers/manage_recontask.php
	godmode/servers/manage_recontask_form.php: Added switch to 
	enable/disabe a recon task

2011-07-07 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/styles/pandora_black.css: Changed some imcompatible 
	colors.

2011-07-07 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* pandoradb_data.sql
	pandoradb.data.postgreSQL.sql
	pandoradb.data.oracle.sql: Default skin applied to all groups 
	by default.

2011-07-06 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/styles/pandora.css
	operation/events/events_list.php
	images/splash_pandora.png
	images/sort_down.png
	images/sort_up.png
	general/pandora_help.php
	general/error_perms.php
	general/login_page.php
	general/error_noconfig.php
	general/logoff.php
	general/error_install.php
	godmode/alerts/alert_list.list.php: Css style improvements.

2011-07-06 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_html.php
	include/styles/dialog.css
	include/styles/pandora_blackmetal.css
	include/styles/menu.css
	include/styles/pandora_black.css
	include/styles/pandora.css
	include/functions_ui.php
	extensions/update_manager/main.php
	operation/visual_console/index.php
	operation/agentes/status_monitor.php
	operation/agentes/estado_ultimopaquete.php
	operation/agentes/alerts_status.php
	operation/agentes/estado_generalagente.php
	operation/agentes/estado_agente.php
	operation/agentes/gis_view.php
	operation/agentes/estado_monitores.php
	operation/agentes/ver_agente.php
	operation/agentes/graphs.php
	operation/agentes/group_view.php
	operation/users/user_edit.php
	operation/events/events_list.php
	operation/messages/message.php
	operation/reporting/graph_viewer.php
	pandoradb.data.postgreSQL.sql
	pandoradb.data.oracle.sql
	images/agents_group.png
	images/application_double.png
	images/sitemap.png
	images/application_edit.png
	images/file.png
	images/page_white_text.png